# squirrel-core

./: .env  .gitignore  .gitlab-ci.yml  Cargo.toml  LICENSE  README.md  test_db.js
.sqlx/: query-02b39981ca533d3b9c8e880abee485e09b60ed3777626e200aeba58a2f93fce7.json  query-0364d7b3a1ea46f0643bfad5befc9e8a02a76dce75646094889e8c16893a9122.json  query-051b8c128c1929642e4096254b3335d8408e15d3e55cf7d849e3e0e218b0c0bd.json  query-0928ba16dd0ca93044abb696d26741378867f89a9b89dccf319e03cb74ccd417.json  query-0c437a97e3f472879c22c8b1bd05f70d06a37c88f0c744ec3c2eae15d97d9e16.json  query-0d72b7aa2716edb26d94febf97340ba21557cde4391670d2a330274d9eadc317.json  query-0f29ff0608703388fc9aa36947715468cd322446ea1aae3c1da074bc2803f6d8.json  query-11aeb63fba8bfe6e9b995c550d5ab449c9846c2d8e949eaf4a87a2ffacc4f338.json  query-14abdd0dc15c2e94aab50f6ea8d652fe005ec8a995f08c019469dd324593a157.json  query-199839a165a29c7624edc549c9d380ed6660ebec9ad3d330de14f7a89d98b715.json  query-2880f51d0f0a5f47ea20af86de2d48c2cee7ada27b9c22ed29f6a5863137cfd3.json  query-2a8c7b2eaf1659a7d11731e693ebdfe10393b0e0dd14a3b9350b2c92abc5611f.json  query-2d59301d87ee60b6b2ca7e9ee7aa3ed72305d201a413d127d61f482e5f765162.json  query-2f0c688fc8e9fcacd7602a171b10ad8f50488fe1c1c2e1dd2be390df6d233b2d.json  query-30ddce572039e3e02827528c67c7463a83e99842a12f44c93e96ccd0a612cc6b.json  query-3be1a846bbcba77e67955c928b530357b9798fcf8a9cfe06b0c2602c6c8ddb69.json  query-3c062a5187236edb746e5c90ac2c89b9e1f2e24c3ad4a3961ecc60629b6060df.json  query-47a8427e8f8432ab270b095282eed84ada8d8a97d6db796587cd0f6bdb01c0db.json  (+44 more)
etc/: .env-s  (+8 more)
(+266 files in other folders)
