[package]
name = "squirrel-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = { version = "0.6.20", features = ["ws", "macros", "query", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bb8-redis = "0.15.0"
bb8 = "0.8.3"
rand = "0.8.4"
