[package]
name = "squirrel-core"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.35.1", features = ["full", "signal", "tracing", "sync"] }
tokio-tungstenite = { version = "0.21.0", features = ["native-tls", "connect", "handshake"] }
axum = { version = "0.7.4", features = ["ws", "macros", "query", "json"] }
serde = { version = "1.0.192", features = ["derive"] }
serde_json = "1.0.114"
uuid = { version = "1.3", features = ["v4"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = { version = "1.0.72", features = ["backtrace"] }
async-trait = "0.1.81"
futures-util = { version = "0.3.29", default-features = false, features = ["sink", "std"] }
once_cell = "1.19"
jsonwebtoken = "9.2.0"
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio", "tls-native-tls"] }
dotenvy = "0.15.7"
rand = "0.8"
num_cpus = "1.16"
tower-http = { version = "0.5", features = ["cors"] }
http = "0.2"
hex = "0.4"
hmac = "0.12"
sha2 = "0.10"
url = "2.4"
